--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "A minimalistic e-commerce assignment project",
   "main": "./dist/app.js",
   "scripts": {
+    "dev": "tsc --watch index.",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "MD. Hasibul Hasan Rasel",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
+    "eslint": "^9.3.0",
     "typescript": "^5.4.5"
   }
 }
