--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "A minimalistic e-commerce assignment project",
   "main": "./dist/app.js",
   "scripts": {
+    "start:prod": "node ./dist/server.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "dev": "tsc --watch index.",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint src --ignore-pattern .ts",
+    "lint:fix": "npx eslint src --fix",
+    "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
+    "prettier:fix": "npx prettier --write src"
   },
   "keywords": [],
   "author": "MD. Hasibul Hasan Rasel",
@@ -18,11 +24,17 @@
     "mongoose": "^8.4.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
-    "eslint": "^9.3.0",
-    "typescript": "^5.4.5"
+    "eslint": "9.x",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.3.0",
+    "prettier": "^3.2.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.10.0"
   }
 }
