--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,15 @@
   "builds": [
     {
       "src": "dist/server.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/server.js"
+      "dest": "dist/server.js",
+      "methods": ["GET", "PUT", "PATCH", "POST", "DELETE", "OPTIONS"]
     }
   ]
 }
